--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,33 @@
 [tox]
-envlist = py26,py27
+envlist = py26,py27,py33,py34,pypy
 
 [testenv]
 usedevelop=True
 deps =
     -rrequirements.txt
-    -rrequirements-dev.txt
 commands =
     nosetests -v {posargs}
     flake8 compose tests setup.py
+
+[testenv:py26]
+deps =
+    {[testenv]deps}
+    -rrequirements-dev-py2.txt
+
+[testenv:py27]
+deps = {[testenv:py26]deps}
+
+[testenv:pypy]
+deps = {[testenv:py26]deps}
+
+[testenv:py33]
+deps =
+    {[testenv]deps}
+    -rrequirements-dev-py3.txt
+
+[testenv:py34]
+deps = {[testenv:py33]deps}
+
 
 [flake8]
 # ignore line-length for now
