--- a/tox.ini
+++ b/tox.ini
@@ -2,13 +2,12 @@
 envlist = py26,py27
 
 [testenv]
-usedevelop=True
 deps =
     -rrequirements.txt
     -rrequirements-dev.txt
 commands =
     nosetests -v {posargs}
-    flake8 compose
+    flake8 fig
 
 [flake8]
 # ignore line-length for now
