--- a/tox.ini
+++ b/tox.ini
@@ -2,6 +2,7 @@
 envlist = py26,py27
 
 [testenv]
+usedevelop=True
 deps =
     -rrequirements.txt
     -rrequirements-dev.txt
@@ -11,5 +12,5 @@ commands =
 
 [flake8]
 # ignore line-length for now
-ignore = E501,E203,E731
+ignore = E501,E203
 exclude = compose/packages
