--- a/tox.ini
+++ b/tox.ini
@@ -1,34 +1,31 @@
 [tox]
-envlist = py26,py27,py33,py34,pypy
+envlist = py27,py34,pypy
 
 [testenv]
 usedevelop=True
+passenv =
+    LD_LIBRARY_PATH
+setenv =
+    HOME=/tmp
 deps =
     -rrequirements.txt
 commands =
     nosetests -v {posargs}
     flake8 compose tests setup.py
 
-[testenv:py26]
+[testenv:py27]
 deps =
     {[testenv]deps}
-    -rrequirements-dev-py2.txt
-
-[testenv:py27]
-deps = {[testenv:py26]deps}
+    -rrequirements-dev.txt
 
 [testenv:pypy]
-deps = {[testenv:py26]deps}
-
-[testenv:py33]
-deps =
-    {[testenv]deps}
-    -rrequirements-dev-py3.txt
+deps = {[testenv:py27]deps}
 
 [testenv:py34]
-deps = {[testenv:py33]deps}
-
-# TODO pypy3
+deps =
+    {[testenv]deps}
+    flake8
+    nose
 
 [flake8]
 # ignore line-length for now
